network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: web
spec:
  podSelector:               # To which the policy applies. 
    matchLabels:
      app: web-consumer
  policyTypes:               # Include either Ingress, Egress, or both.
    - Ingress
    - Egress
  ingress:                   # Allows traffic which matches both the "from" and "ports" sections.
    - from:
        - namespaceSelector: # Allows a all pods within a praticular namespace.
            matchLabels:
              app: auth-db
        # - podSelector:       # Allows a particular pod.
        #     matchLabels:
        #       role: frontend
      ports:                 # Allows a particular "protocol" and "port".
        - protocol: TCP
          port: 80
